@@ -212,6 +212,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * Add id="mw-user-domain-section" to <tr> tag in Userlogin.php template so that
   admins with a single domain can hide the domain section using CSS
 * Dropped old Paser_OldPP class. Only new parser with preprocessor is used.
+* Moved password reset form from Special:Preferences to Special:ResetPass
+* Added Special:ChangePassword as a special page alias for Special:ResetPass
 
 === Bug fixes in 1.14 ===
 
